incluindo tag main

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
-<head>Alterado</head>
+<head><title>Curso GIT Alura</title></head>
 <body>
-
+	<h1>Arquivo de testes do curso de GIT Alura</h1>
 </body>
 </html>
