inicio do design

--- a/index.html
+++ b/index.html
@@ -1,6 +1,24 @@
 <html>
-<head><title>Curso GIT Alura</title></head>
+
+<head>
+
+<link rel="stylesheet" href="estilo.css" />
+
+<title>Curso GIT Alura</title>
+
+</head>
 <body>
-	<h1>Arquivo de testes do curso de GIT Alura</h1>
+	<center><h1>GIT</h1></center>
+	<h2>Arquivo de testes do curso de GIT Alura</h2>
+	
+	<main>Esse é o conteúdo da página!</main>
+	
+	<h2>Principais Beneficios do GIT</h2>
+	<p>
+		<ul>
+			<li> Funciona de maneira distribuida </li>
+			<li> Permite a alteração concorrente de arquivos do projeto </li>
+		<ul/>
+	</p>
 </body>
 </html>
